<resources>
    <string name="app_name" translatable="false">Share</string>
    <string name="app_launcher" translatable="false">com.hengye.share.Launcher</string>
    <string name="tip_welcome">Hello %s!</string>
    <string name="tip_load_image_fail">加载图片失败</string>
    <string name="tip_no_network">请检查网络后重试</string>
    <string name="tip_load_error">请求失败</string>
    <string name="tip_load_success">请求成功</string>
    <string name="tip_unpredictable_error">出现不可预知的错误</string>
    <string name="tip_loading">加载中</string>
    <string name="tip_loading_2">正在加载中…</string>
    <string name="tip_load_ending">已经到底了！(ಥ_ಥ)</string>
    <string name="tip_load_fail">加载失败，点击重试  (●ﾟωﾟ●)</string>
    <string name="tip_load_more">显示更多内容 ─=≡Σ(((つ•̀ω•́)つ</string>
    <string name="tip_empty">当前内容为空</string>
    <string name="tip_service_error">请求失败，请稍后尝试</string>
    <string name="tip_service_pause">服务暂停，请稍后尝试</string>
    <string name="tip_try_refresh">刷新试试</string>
    <string name="tip_exit_on_back_pressed">再按一次退出应用</string>
    <string name="tip_no_app_store">找不到可用的应用市场</string>
    <string name="tip_not_appear_again">不再提示</string>
    <string name="tip_cancel">取消</string>
    <string name="tip_confirm">确定</string>
    <string name="tip_repeal">撤销</string>
    <string name="tip_retry">重试</string>
    <string name="tip_copy_content_to_clipboard_success">内容已复制到剪切板</string>
    <string name="tip_copy_status_to_clipboard_success">微博内容已复制到剪切板</string>
    <string name="label_no_network">无法连接到服务器，请检查你的网络设置。</string>
    <string name="tip_null">无</string>
    <string name="tip_load_video_fail">加载视频失败，是否直接打开链接？</string>
    <string name="tip_start_user_guide">是否查看用户使用手册，了解一下应用的特点？</string>
    <string name="label_search">搜索</string>
    <string name="tip_error_service_unavailable">服务暂停，请稍后尝试</string>
    <string name="separator_horizontal_line">-</string>
    <string name="separator_comma">，</string>
    <string name="unit_ten_thousand">万</string>
    <string name="time_unknown">未知</string>
    <string name="time_now">刚刚</string>
    <string name="time_today">今天</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_few_minutes_ago">%s分钟前</string>
    <string name="time_format_hm">%1$s:%2$s</string>
    <string name="time_format_md">%1$s-%2$s</string>
    <string name="time_format_ymd">%1$s-%2$s-%3$s</string>
    <string name="date_format_hm">HH时mm分</string>
    <string name="date_format_md">MM月dd日</string>
    <string name="date_format_ymd">yyyy年MM月dd日</string>
    <string name="transition_name_status">transition:status</string>
    <string name="transition_name_avatar">transition:avatar</string>
    <string name="fling_behavior" translatable="false">com.hengye.share.ui.support.FlingBehavior</string>
    <string name="label_gallery_save_to_local">保存到手机</string>
    <string name="label_gallery_image_large">查看原图</string>
    <string name="tip_gallery_image_save_success">图片已保存至 : %s</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="tip_cancel_authorize">你取消了授权</string>
    <string name="tip_need_advanced_authorize">需要高级授权，是否继续？</string>
    <string name="tip_token_expire">当前登录信息已过期，是否重新登录？</string>
    <string name="tip_token_expire_txt">当前登录信息已过期，请重新登录</string>
    <string name="tip_permission_denied">权限不足</string>
    <string name="tip_authorize_success">授权成功</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_drawer_hot_topic_and_status">热门话题和微博</string>
    <string name="title_drawer_private_message">私信</string>
    <string name="title_drawer_at_me">提及</string>
    <string name="title_drawer_comment">评论</string>
    <string name="title_drawer_favorites">收藏</string>
    <string name="title_drawer_group_manage">分组管理</string>
    <string name="title_drawer_draft">草稿箱</string>
    <string name="title_drawer_others">其他</string>
    <string name="title_drawer_setting">设置</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_status_notify">通知</string>
    <string name="title_activity_at_user">选择用户</string>
    <string name="title_activity_status_draft">草稿箱</string>
    <string name="title_activity_group_manage">分组管理</string>
    <string name="title_activity_account_manage">账号管理</string>
    <string name="title_activity_status_topic">相关话题</string>
    <string name="title_activity_search_user">搜索用户结果</string>
    <string name="title_activity_hot_topic_and_status">热门话题和微博</string>
    <string name="title_activity_hot_topic">热门话题</string>
    <string name="title_activity_favorite">我收藏的微博</string>
    <string name="title_activity_web_view">浏览</string>
    <string name="title_activity_follower_list">粉丝列表</string>
    <string name="title_activity_attention_list">关注列表</string>
    <string name="title_activity_status_body">微博正文</string>
    <string name="title_activity_hot_comment">热门评论</string>
    <string name="title_activity_wb_web_login">微博登录</string>
    <string name="title_activity_around_address">选择附近地点</string>
    <string name="title_activity_user_guide">用户使用手册</string>
    <string name="title_page_unknown">未知分组</string>
    <string name="title_page_all">全部微博</string>
    <string name="title_page_bilateral">互相关注</string>
    <string name="title_page_comment">评论</string>
    <string name="title_page_comment_to_me">我收到的评论</string>
    <string name="title_page_comment_by_me">我发出的评论</string>
    <string name="title_page_status">微博</string>
    <string name="title_page_mention">提及</string>
    <string name="title_page_theme">相关话题</string>
    <string name="title_page_favorites">我收藏的微博</string>
    <string name="tip_update_group_order">是否更新分组顺序？</string>
    <string name="label_create_group">新建分组</string>
    <string name="label_edit_group">编辑分组</string>
    <string name="label_group_count">%s人</string>
    <string name="tip_delete_group_confirm">是否删除该分组？</string>
    <string name="tip_delete_group_success">成功删除分组</string>
    <string name="tip_update_group_success">更新成功</string>
    <string name="tip_update_group_fail">更新失败</string>
    <string name="tip_create_group_success">成功创建分组</string>
    <string name="hint_group_name">分组名字</string>
    <string name="hint_group_desc">分组描述(可不填)</string>
    <string name="error_group_name_null">分组名字不能为空</string>
    <string name="tip_status_like_create_success">点赞成功</string>
    <string name="tip_status_like_destroy_success">已取消点赞</string>
    <string name="tip_status_favorite_create_success">收藏成功</string>
    <string name="tip_status_favorite_destroy_success">已取消收藏</string>
    <string name="label_time_and_from">%1$s 来自 %2$s</string>
    <string name="label_status_repost">转发</string>
    <string name="label_status_comment">评论</string>
    <string name="label_status_collect">收藏</string>
    <string name="label_status_collect_cancel">取消收藏</string>
    <string name="label_status_attitude">赞</string>
    <string name="label_status_attitude_cancel">取消赞</string>
    <string name="label_status_repost_origin">转发原微博</string>
    <string name="label_status_copy">复制</string>
    <string name="label_status_destroy">删除</string>
    <string name="label_status_destroy_success">成功删除微博</string>
    <string name="label_comment_reply">回复</string>
    <string name="label_repost_detail">查看该微博</string>
    <string name="label_url_at_user">\@TA</string>
    <string name="label_url_search_topic">查看话题</string>
    <string name="label_url_open_link">打开链接</string>
    <string name="label_url_copy_content">复制内容</string>
    <string name="label_url_copy_link">复制链接</string>
    <string name="label_url_open_current_status">查看微博</string>
    <string name="label_status_repost_number">转发 (%s)</string>
    <string name="label_status_comment_number">评论 (%s)</string>
    <string name="label_status_attitude_number">赞 (%s)</string>
    <string name="label_at_ta">\@TA</string>
    <string name="label_private_message">私信</string>
    <string name="label_detail_info">详细资料</string>
    <string name="label_all_groups_visible">所有人可见</string>
    <string name="label_assign_group_visible">指定分组可见</string>
    <string name="label_publish_on_time">定时发送</string>
    <string name="label_publish_on_time_cancel">取消定时</string>
    <string name="title_setting_common">常规设置</string>
    <string name="title_setting_common_basic">基本设置</string>
    <string name="title_setting_common_flow_control">流量控制</string>
    <string name="title_setting_common_sound_control">音效管理</string>
    <string name="title_setting_common_notify">通知设置</string>
    <string name="title_setting_show">显示设置</string>
    <string name="title_setting_show_theme">主题</string>
    <string name="title_setting_show_reading_habit">阅读习惯</string>
    <string name="title_setting_other">其他</string>
    <string name="title_setting_other_about">关于</string>
    <string name="title_setting_other_feedback">意见反馈</string>
    <string name="title_setting_other_share">分享</string>
    <string name="title_setting_launch_check_update">启动时检查更新</string>
    <string name="title_setting_home_back">首页按返回键退出</string>
    <string name="title_setting_home_back_summary">首页按返回键退出应用，不在后台运行</string>
    <string name="title_setting_swipe_back">二级页面滑动后退</string>
    <string name="title_setting_photo_save_path">图片保存路径</string>
    <string name="title_setting_click_photo_back">点击图片返回</string>
    <string name="title_setting_clear_photo_cache">清除图片缓存</string>
    <string name="title_setting_internal_browser">使用内置浏览器</string>
    <string name="title_setting_preread">预读模式</string>
    <string name="title_setting_preread_summary">当内容快浏览到尽头时提前加载避免等待</string>
    <string name="title_setting_load_count">每次加载获取内容的条数</string>
    <string name="title_setting_ringtone">铃声设置</string>
    <string name="title_setting_sound_off">静音模式</string>
    <string name="title_setting_sound_off_summary">关闭一切提醒音效</string>
    <string name="title_setting_refresh_ringtone">下拉刷新音效</string>
    <string name="title_setting_refresh_ringtone_summary">下拉刷新成功后播放提示音</string>
    <string name="title_setting_vibration">震动设置</string>
    <string name="title_setting_vibration_on">开启震动</string>
    <string name="title_setting_vibration_feedback">震动反馈</string>
    <string name="title_setting_vibration_feedback_summary">内容发送成功后震动反馈</string>
    <string name="title_setting_vibration_remind">震动提醒</string>
    <string name="title_setting_vibration_remind_summary">收到通知后震动提醒(须开启通知提醒)</string>
    <string name="title_setting_notify_open">开启通知提醒</string>
    <string name="title_setting_remind">提醒设置</string>
    <string name="title_setting_remind_type">提醒类型</string>
    <string name="title_setting_remind_by_ringtone">铃声提醒</string>
    <string name="title_setting_remind_by_vibration">震动提醒</string>
    <string name="title_setting_remind_by_lights">呼吸灯提醒</string>
    <string name="title_setting_no_remind_at_night">夜间免打扰</string>
    <string name="title_setting_no_remind_at_night_summary">凌晨1点到早上8点关闭通知提醒</string>
    <string name="title_setting_notify_frequency">提醒时间间隔</string>
    <string name="title_setting_font_zoom">字体缩放</string>
    <string name="title_setting_menu_show_style">功能菜单显示风格</string>
    <string name="title_setting_browse">浏览设置</string>
    <string name="title_setting_read_order">阅读顺序</string>
    <string name="title_setting_read_order_summary">「顺序阅读」表示刷新时总是从最新微博开始阅读，「逆序阅读」表示刷新时保留上次的阅读位置，从加载新微博的最后一条向最新阅读</string>
    <string name="title_setting_auto_night_mode">自动进入夜间模式</string>
</resources>