<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hengye.share.module.setting.SettingActivity">
    <PreferenceCategory android:title="@string/title_setting_common">
        <Preference
            android:key="@string/title_setting_common_basic"
            android:title="@string/title_setting_common_basic">
        </Preference>
        <Preference
            android:key="@string/title_setting_common_flow_control"
            android:title="@string/title_setting_common_flow_control"/>
        <Preference
            android:key="@string/title_setting_common_sound_control"
            android:title="@string/title_setting_common_sound_control"/>
        <Preference
            android:key="@string/title_setting_common_notify"
            android:title="@string/title_setting_common_notify"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_setting_show">
        <ListPreference
            android:key="theme_app"
            android:title="@string/title_setting_show_theme"
            android:entries="@array/theme_app_entries"
            android:entryValues="@array/theme_app_values"
            android:defaultValue="@array/empty_string_array"/>
        <Preference
            android:key="@string/title_setting_show_reading_habit"
            android:title="@string/title_setting_show_reading_habit"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_setting_other">
        <Preference
            android:key="@string/title_setting_other_about"
            android:title="@string/title_setting_other_about"/>
        <Preference
            android:key="@string/title_setting_other_feedback"
            android:title="@string/title_setting_other_feedback"/>
        <Preference
            android:key="@string/title_setting_other_share"
            android:title="@string/title_setting_other_share"/>
    </PreferenceCategory>
</PreferenceScreen>