<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hengye.share.ui.activity.setting.SettingActivity">

    <PreferenceCategory android:title="@string/title_setting_show">
        <Preference
            android:key="font_zoom"
            android:title="@string/title_setting_font_zoom" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/menu_show_style"
            android:entryValues="@array/menu_show_style_value"
            android:key="menu_show_style"
            android:summary="%s"
            android:title="@string/title_setting_menu_show_style" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="show_avator"
            android:summary="@string/title_setting_show_avator_summary"
            android:title="@string/title_setting_show_avator" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_setting_browse">

        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_night_mode"
            android:title="@string/title_setting_auto_night_mode" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_setting_read_order_summary">

    </PreferenceCategory>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/reader_order"
        android:entryValues="@array/reader_order_value"
        android:key="read_order"
        android:summary="%s"
        android:title="@string/title_setting_read_order" />
    
    <SwitchPreference
        android:defaultValue="true"
        android:key="preread"
        android:summary="@string/title_setting_preread_summary"
        android:title="@string/title_setting_preread" />

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/load_count"
        android:entryValues="@array/load_count_value"
        android:key="load_count"
        android:summary="%s"
        android:title="@string/title_setting_load_count" />


</PreferenceScreen>